# ai-mcp-client-python

./: .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.md  GEMINI_FIXES_SUMMARY.md  INTERFACES_USAGE.md  LICENSE  MCP-client.postman_collection.json  PROJECT_REORGANIZATION_PLAN.md  README.md  REAL_CHAT_VALIDATION_COMPLETE.md  REORGANIZATION_COMPLETE.md  SECURITY.md  SERVICE_VALIDATION_COMPLETE.md  install_and_validate.py  install_complete.bat  mcp_response_structure_improvement.md  model_understanding_improvements.md  package-lock.json  package.json  project_struture_of_our_python_mcp.txt  pyproject.toml  quick_start.bat  quick_start.sh  requirements-dev.txt  requirements.txt  start_websocket_server.py  test_chatbot.py  test_enhancements.py
configs/: mcp_servers.json
docs/: README.md  VERIFICATION_SUMMARY.md
docs/api-reference/: API_REFERENCE.md  WEBSOCKET_REFERENCE.md
docs/developer-guide/: ARCHITECTURE.md
docs/user-guide/: GETTING_STARTED.md
global_mcp_client/: __init__.py  chatbot.py  cli.py  dynamic_orchestrator.py  main.py  orchestrator.py  run_query.py  websocket_server.py
global_mcp_client/configs/: mcp_servers.json
global_mcp_client/core/: __init__.py  client.py  config.py  logger.py
global_mcp_client/enhancements/: __init__.py
global_mcp_client/enhancements/context/: context_manager.py
global_mcp_client/enhancements/monitoring/: __init__.py  performance_tracker.py
global_mcp_client/enhancements/quality/: __init__.py  response_optimizer.py
global_mcp_client/enhancements/reasoning/: __init__.py  cot_engine.py
global_mcp_client/servers/: calculator_server.py
global_mcp_client/utils/: validators.py
scripts/: security_check.py
src/mcp_client/: __init__.py  __main__.py
src/mcp_client/ai/context/: __init__.py
src/mcp_client/ai/metacognition/: __init__.py  meta_engine.py
src/mcp_client/core/: client.py  config.py  exceptions.py  logger.py
src/mcp_client/interfaces/: __init__.py  chatbot.py  rest_api.py  websocket.py
src/mcp_client/servers/: __init__.py  calculator_server.py  weather_server.py
src/mcp_client/services/: __init__.py  interface_coordinator.py  mcp_service.py
src/mcp_client/utils/: __init__.py  helpers.py  rate_limiter.py  validators.py
tests/: conftest.py  test_asyncio_cleanup_simple.py  test_config.py  test_cross_platform.py  test_gemini_enhancements.py  test_gemini_integration.py  test_improved_chatbot_ui.py  test_input.txt  test_piped_input_fix.py  test_utils.py
